--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     </nav>
 
    <div class="topnav">
-        <a href="#home" class="active">Café</a>
+        <a href="index.html" class="active">Café</a>
         <div id="myLinks">
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
